--- a/src/views/pages/clients.pug
+++ b/src/views/pages/clients.pug
@@ -38,5 +38,5 @@ block content
                 li.clients-page__item
                   h3.clients-page__title 
                     |#{item.title}
-                  p
+                  p.clients-page__text
                     |#{item.text}
