Update contacts mobile

--- a/src/assets/styles/pages/contacts-page.scss
+++ b/src/assets/styles/pages/contacts-page.scss
@@ -3,11 +3,17 @@
 
   &__row {
     display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      display: block;
+    }
     align-items: center;
     justify-content: space-between;
   }
 
   &__button {
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-top: 32px;
+    }
     display: flex;
     align-items: center;
   }
@@ -24,17 +30,26 @@
 
   &__inner {
     margin-top: 40px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-top: 16px;
+    }
   }
 
   &__label {
     color: $color-gray;
     @include fsl(14px, 140%);
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(12px, 140%);
+    }
   }
 
   &__link {
     margin-top: 2px;
     display: block;
     font-weight: 500;
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(14px, 140%);
+    }
   }
 
   &__text {
@@ -44,33 +59,77 @@
     @include fsl(14px, 140%);
   }
 
+  &__title {
+    margin-bottom: 40px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__block {
+    margin-top: 20px;
+    @media (min-width: ($breakpoint - 1px)) {
+      margin-top: 12px;
+    }
+  }
+
   &__section {}
   &__section-row {
     display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      display: block;
+    }
     justify-content: space-between;
   }
   &__section-col {
     flex-shrink: 0;
     width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
     display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      width: 100%;
+      display: block;
+    }
 
     &:nth-child(1) {
       #{$comp}__section-item {
         width: calc(#{$col-part-d} * 2);
+        @media (max-width: ($breakpoint - 1px)) {
+          width: 100%;
+        }
 
         &:first-child {
           width: calc(#{$col-part-d} * 2 - #{$col-gap-d});
+          @media (max-width: ($breakpoint - 1px)) {
+            width: 100%;
+          }
         }
       }
     }
 
     &:nth-child(2) {
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 12px;
+      }
+
       #{$comp}__section-item {
         width: calc(#{$col-part-d} * 2);
+        @media (max-width: ($breakpoint - 1px)) {
+          width: 100%;
+        }
 
         &:last-child {
           width: calc(#{$col-part-d} * 2 - #{$col-gap-d});
+          @media (max-width: ($breakpoint - 1px)) {
+            width: 100%;
+          }
         }
+      }
+    }
+  }
+  &__section-item {
+    &:not(:first-child) {
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 12px;
       }
     }
   }
@@ -79,13 +138,21 @@
     display: flex;
     align-items: center;
 
-    border-radius: 4px;
     overflow: hidden;
+    border-radius: 4px;
+    @media (max-width: ($breakpoint - 1px)) {
+      border-radius: 2px;
+    }
   }
 
   &__grid {
     --itemCount: 2;
     --gap: 20px;
+    @media (max-width: ($breakpoint - 1px)) {
+      --itemCount: 1;
+      --gap: 40px;
+      row-gap: var(--gap);
+    }
 
     display: grid;
     grid-template-columns: repeat(var(--itemCount), 1fr);
@@ -93,16 +160,34 @@
   }
   &__grid-row {
     display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      display: block;
+    }
     justify-content: space-between;
   }
   &__grid-col {
     flex-shrink: 0;
     width: calc(#{$col-part-d} * 3 - #{$col-gap-d});
+    @media (max-width: ($breakpoint - 1px)) {
+      width: 100%;
+    }
+
+    &:nth-child(2) {
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 16px;
+      }
+    }
   }
   &__grid-inner {
     display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      display: block;
+    }
   }
   &__grid-right {
     margin-left: 32px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-left: 0;
+    }
   }
 }
