--- a/src/views/components/aside.pug
+++ b/src/views/components/aside.pug
@@ -12,7 +12,7 @@ mixin aside
                   label.checkbox__label
                     input.checkbox__input(type="checkbox")
                     .checkbox__box 
-                      .checkbox__icon
+                      +check-svg.checkbox__svg
                     .checkbox__text 
                       |Углеродистая сталь
           .aside__button.aside__inner
