--- a/src/assets/styles/modules/checkbox.scss
+++ b/src/assets/styles/modules/checkbox.scss
@@ -26,7 +26,11 @@
 
     &:checked {
       ~#{$comp}__box {
-        background: black;
+        background: $color-blue;
+
+        #{$comp}__svg {
+          opacity: 1;
+        }
       }
     }
   }
@@ -36,10 +40,19 @@
 
     width: $size;
     height: $size;
+    
     flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     border-radius: 4px;
     border: 1px solid $color-light-gray;
+    transition: $transition;
+  }
+
+  &__svg {
+    opacity: 0;
     transition: $transition;
   }
 
