--- a/src/assets/styles/modules/header.scss
+++ b/src/assets/styles/modules/header.scss
@@ -8,6 +8,17 @@
   right: 0;
 
   background: $color-white;
+  transition: $transition;
+
+  
+
+  &--up {
+    transform: translateY(-80px);
+
+    #{$comp}__logo {
+      transform: scale(0.55) translateY(80px) translateZ(0);
+    }
+  }
   
   &__inner {
     padding: 20px 20px 0;
@@ -31,9 +42,13 @@
     }
     display: flex;
     justify-content: center;
+
+    transition: $transition;
   }
 
   &__svg {
+    transform: perspective(1px) translateZ(0);
+
     @media (max-width: ($breakpoint - 1px)) {
       width: 73px;
       height: 30px;
@@ -90,12 +105,14 @@
     &:nth-child(1) {
       width: calc(#{$col-part-d} * 6);
 
-      border-right: 1px solid $color-light-gray;
     }
     &:nth-child(2) {
-      width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
+      margin: -1px 0;
 
-      border-right: 1px solid $color-light-gray;
+      // width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
+
+      // border: 1px solid $color-light-gray;
+      // cursor: pointer;
     }
     &:nth-child(3) {
       flex-grow: 1;
@@ -153,12 +170,38 @@
     justify-content: center;
   }
 
+  &__form {
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
   &__search {
-    margin-left: 32px;
+    padding-left: 32px;
+
+    width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
+    height: 100%;
 
     display: flex;
     align-items: center;
+
+    border: 1px solid $color-light-gray;
     cursor: pointer;
+    transition: $transition;
+
+    &:focus-within {
+      border-color: $color-blue;
+
+      #{$comp}__search-svg {
+        circle {
+          stroke: $color-blue;
+        }
+
+        line {
+          stroke: $color-blue;
+        }
+      }
+    }
   }
   &__search-icon {
     margin-right: 15px;
@@ -167,16 +210,33 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    cursor: pointer;
+    background: none;
+    border: none;
   }
   &__search-svg {
     @media (max-width: ($breakpoint - 1px)) {
       width: 24px;
       height: 25px;
     }
+
+    circle {
+      transition: $transition;
+    }
+    line {
+      transition: $transition;
+    }
   }
-  &__search-text {
+  &__search-input {
+    width: 100%;
+
+    border: none;
     @include fsl(14px, 140%);
-    color: $color-gray;
+    @include f-main();
+    @include placeholder {
+      color: $color-gray;
+    }
   }
 
   &__links {
@@ -363,5 +423,49 @@
       background: $color-white;
       transition: .3s;
     }
+  }
+
+  &__modal {
+
+    &::before {
+      // content: "";
+      // position: absolute;
+      // left: 0;
+      // right: 0;
+      // bottom: 0;
+      // top: 100%;
+
+      // height: 300vh;
+
+      // background: rgba($color-black, 0.2);
+      // opacity: 0;
+      // transition: $transition;
+    }
+
+    &--active {
+
+      #{$comp}__modal-overlay {
+        visibility: visible;
+      }
+    }
+  }
+  &__modal-overlay {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 100%;
+
+    height: 300vh;
+
+    background: rgba($color-black, 0.2);
+    visibility: hidden;
+    transition: $transition;
+  }
+  &__modal-product {
+    display: none;
+  }
+  &__modal-container {
+    padding: 24px calc(#{$col-pad-d}) 38px calc(#{$col-part-d} + #{$col-pad-d});
   }
 }
