--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -22,14 +22,14 @@ mixin header
                 .header__accordion-text
                   |Оборудование 
                 .header__accordion-icon
-                  +arrow-svg
+                  +arrow-svg.header__accordion-svg
               .header__accordion-dropdown
             .header__accordion(data-accordion-header='2')
               .header__accordion-button 
                 .header__accordion-text
                   |Инструмент 
                 .header__accordion-icon
-                  +arrow-svg
+                  +arrow-svg.header__accordion-svg
               .header__accordion-dropdown
             ul.header__nav
               li.header__nav-item 
@@ -39,11 +39,11 @@ mixin header
                 a.header__nav-link(href="#") 
                   |Клиентам
               li.header__nav-item 
-                .header__nav-button(data-accordion-header='1')
+                .header__nav-button(data-accordion-header='3')
                   .header__nav-text
                     |Услуги 
                   .header__nav-icon
-                    +arrow-svg
+                    +arrow-svg.header__nav-svg
                 .header__nav-dropdown
               li.header__nav-item 
                 a.header__nav-link(href="#") 
@@ -96,13 +96,31 @@ mixin header
         .header__modal-container 
           .header__modal-row 
             .header__modal-col 
-              |qwe
+              ul.header__modal-list
+                each item in ['Токарные станки с ЧПУ', 'Фрезерные станки с ЧПУ', 'Вертикальные токарные и карусельные станки с ЧПУ', 'Ленточнопильные станки', 'Шлифовальные станки', 'Прессовое оборудование', 'Электроэрозионные станки', 'Шлифовальные станки', 'Универсальные станки', 'Прессовое оборудование', 'Раскроечные станки', 'Электроэрозионные станки', 'Измерительное оборудование', ]
+                  li.header__modal-item 
+                    |#{item}
             .header__modal-col 
-              |zxc
+              ul.header__listing
+                each item in ['С направляющими скольжения', 'С направляющими скольжения и осью Y', 'Трубообрабатывающие', 'Автоматы продольного точения', 'С направляющими качения ', 'С направляющими качения и противошпинделем', 'С направляющими качения и осью Y', 'Роботизированные с направляющими качения', 'Токарно-фрезерные с направляющими качения ']
+                  li.header__listing-item 
+                    |#{item}
       .header__modal-product(data-header-modal='2')
         .header__modal-container 
           .header__modal-row 
             .header__modal-col 
-              |123
+              ul.header__modal-list
+                each item in ['Корпусной режущий инструмент', 'Осевой режущий инструмент', 'Вспомогательный инструмент для фрезерных станков с ЧПУ', 'Вспомогательный инструмент для токарных станков с ЧПУ', 'Приспособления', 'Аксессуары для инструмента']
+                  li.header__modal-item 
+                    |#{item}
             .header__modal-col 
-              |rtyu
+              ul.header__listing
+                each item in ['Пластины для точения', 'Токарные пластины MICRONEGA', 'Токарные пластины MICROBORING', 'Пластины для фрезерования', 'Пластины для корпусных сверл', 'Токарные державки', 'Державки MICRONEGA', 'Державки MICROBORING', 'Корпусные сверла', 'Корпусные фрезы']
+                  li.header__listing-item 
+                    |#{item}
+      .header__modal-product(data-header-modal='3')
+        .header__modal-container 
+          ul.header__modal-list.header__modal-list--transparent
+            each item in ['Подбор инструмента', 'Ленточные пилы', 'Сервис', 'Инжиниринг', 'Обучение', 'Лизинг']
+              li.header__modal-item 
+                |#{item}
